# DeltaOS

./: Cargo.toml  Makefile  README.md  build.rs  build.sh  build_img.py  linker.ld  x86_64-deltaos.json
boot/: boot.asm  long_mode.asm  mbr.asm
drivers/: ahci.c  keyboard.c
qemu/: debug.sh  run-img.bat  run-img.sh  run-iso.bat  run-iso.sh  run.bat  run.sh
src/: interrupts.rs  lib.rs  syscall.rs
src/acpi/: mod.rs
src/apic/: mod.rs
src/arch/: gdt.rs  idt.rs
src/fs/: mod.rs  ntfs.rs  vfs.rs
src/memory/: heap.rs  mod.rs  pmm.rs  vmm.rs
src/module/: manager.rs
src/sched/: context_switch.asm  scheduler.rs  task.rs
src/timer/: mod.rs
user/: cpp_std.cpp  init.cpp  shell.cpp
